horizontal scroll issue is fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display=swap');
 
-body {
+html, body {
   overflow-x: hidden;
   position: relative;
 }
 
 body {
+  overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   line-height: 28px;
